ctrlProd nuevo y javadocs